--- a/TychoClient/TychoClient/TychoClient.iOS/TychoClient.iOS.csproj
+++ b/TychoClient/TychoClient/TychoClient.iOS/TychoClient.iOS.csproj
@@ -132,6 +132,9 @@
     <Reference Include="Xamarin.iOS" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Plugin.NFC">
+      <Version>0.1.20</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="3.4.0.1008975" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
