--- a/TychoClient/TychoClient/TychoClient.Android/Properties/AndroidManifest.xml
+++ b/TychoClient/TychoClient/TychoClient.Android/Properties/AndroidManifest.xml
@@ -1,7 +1,7 @@
-<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.companyname.TychoClient">
-    <uses-sdk android:minSdkVersion="21" android:targetSdkVersion="27" />
-    <application android:label="TychoClient.Android"></application>
-    <uses-permission android:name="android.permission.NFC" />
-    <uses-feature android:name="android.hardware.nfc" android:required="false" />
+﻿<?xml version="1.0" encoding="utf-8"?>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.companyname.TychoClient" android:installLocation="auto">
+	<uses-sdk android:minSdkVersion="27" android:targetSdkVersion="27" />
+	<application android:label="TychoClient.Android"></application>
+	<uses-permission android:name="android.permission.NFC" />
+	<uses-feature android:name="android.hardware.nfc" android:required="false" />
 </manifest>
