--- a/TychoClient/TychoClient/TychoClient.iOS/TychoClient.iOS.csproj
+++ b/TychoClient/TychoClient/TychoClient.iOS/TychoClient.iOS.csproj
@@ -135,7 +135,7 @@
     <PackageReference Include="Plugin.NFC">
       <Version>0.1.20</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Forms" Version="3.4.0.1008975" />
+    <PackageReference Include="Xamarin.Forms" Version="5.0.0.2401" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
